# fitsmap

./: .coverage  .coveragerc  .dockerignore  .gitignore  .python-version  .readthedocs.yaml  .rtd.requirements.txt  .travis.yml  CITE.bib  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  codecov.yml  env.yaml  index_async.html  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py  tox.ini
.github/: dependabot.yml
.github/workflows/: black.yml  build-linux.yml  build-osx.yml  build-windows.yml  ci.yml  deploy.yml  dist.yml  security.yml  testing.yml
docs/: Makefile  conf.py  index.rst
docs/source/: conf.py  fitsmap.rst  index.rst  modules.rst
fitsmap/: __init__.py  __main__.py  __version__.py  cartographer.py  convert.py  kdbush.py  map.py  mapmaker.py  output_manager.py  padded_array.py  supercluster.py  utils.py  web_map.py
fitsmap/rust/: Cargo.toml
fitsmap/rust/src/: lib.rs
fitsmap/support/: LabelControl.css  LabelControl.min.css  MarkerCluster.Default.css  MarkerCluster.Default.min.css  MarkerPopup.css  MarkerPopup.min.css  SettingsControl.css  SettingsControl.min.css  TileNearestNeighbor.css  TileNearestNeighbor.min.css  customSearch.js  customSearch.js.txt  customSearch.min.js  fitsmapScale.js  fitsmapScale.min.js  integerTranslate.js  integerTranslate.min.js  l.ellipse.js  l.ellipse.js.txt  l.ellipse.min.js  labelControl.js  labelControl.min.js  meterlessScale.js  meterlessScale.min.js  settingsControl.js  settingsControl.min.js  tiledMarkers.js  tiledMarkers.js.txt  tiledMarkers.min.js  urlCoords.js.tmp  vector-tile.js  vector-tile.js.txt  vector-tile.min.js
fitsmap/tests/: helpers.py  test_cartographer.py  test_cli.py  test_convert.py  test_mapmaker.py  test_utils.py
fitsmap/tests/data/: expected_test_catalog_radec.cat.js  expected_test_catalog_xy.cat.js  expected_test_catalog_xy_0.cat.js  expected_test_catalog_xy_1.cat.js  expected_test_img_for_map.tar.xz  expected_test_png_from_tiff.tar.xz  expected_test_tiling_image.tar.xz  expected_test_tiling_image_mpl.tar.xz  expected_test_tiling_image_pil.tar.xz  expected_test_web.tar.xz  test.cat  test_catalog_fails.cat  test_catalog_radec.cat  test_catalog_xy.cat  test_catalog_xy_ellipse.cat  test_image.fits  test_index.html  test_index_wcs.html
requirements/: build.txt  docs.txt  prd.txt  test.txt
