[project]
name = "fitsmap"
dynamic = ["version"]
authors = [
    { name = "Ryan Hausen", email = "rhausen@jhu.edu" },
    { name = "Brant Robertson", email = "brant@ucsc.edu"}
]
description = "A Simple, Lightweight Tool For Displaying Interactive Astronomical Image and Catalog Data"
readme = "README.rst"
license = "MIT"

requires-python = ">=3.9"
dependencies = [
    "astropy>=6.0.1",
    "cbor2>=5.7.0",
    "click>=8.1.8",
    "mapbox_vector_tile>=2.2.0",
    "matplotlib>=3.9.4",
    "numpy>=1.26.4",
    "pillow>=11.3.0",
    "protobuf>=6.32.0",
    "ray>=2.49.0",
    "shapely>=2.0.7", # this might need to be fixed
    "scikit-image>=0.24.0",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools>=80.9.0", "setuptools_scm[toml]>=9.2.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
exclude = ["fitsmap.tests*", "fitsmap/tests*"]

[tool.setuptools_scm]
write_to = "fitsmap/_version.py"

[tool.bandit]
exclude_dirs = ["fitsmap/tests"]

[dependency-groups]
dev = [
    "bandit==1.8.6",
    "build==1.2.2.post1",
    "debugpy>=1.8.0",
    "nbsphinx==0.9.7",
    "pytest==8.4.1",
    "pytest-cov==6.2.1",
    "setuptools==80.9.0",
    "setuptools-scm[toml]==8.3.1",
    "sphinx==6.2.1",
    "sphinx-automodapi==0.20.0",
    "sphinx-book-theme==1.1.4",
    "sphinx-rtd-theme==3.0.2",
]
prd = [
    "astropy==6.0.1",
    "cbor2==5.7.0",
    "click==8.1.8",
    "mapbox_vector_tile==2.2.0",
    "matplotlib==3.9.4",
    "numpy==1.26.4",
    "pillow==11.3.0",
    "protobuf==6.32.0",
    "ray==2.49.0",
    "shapely==2.0.7",
    "scikit-image==0.24.0",
    "tqdm==4.67.1",
]
